--- a/asstes/css/media.css
+++ b/asstes/css/media.css
@@ -9,6 +9,12 @@
     grid-template-columns: repeat(4, 1fr);
     align-items: center;
   }
+  .adventure-items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding-top: 60px;
+  }
 }
 /* Md */
 @media (max-width: 991px) {
@@ -29,6 +35,22 @@
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
   }
+  .adventure-items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding-top: 60px;
+  }
+  .whoinner {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 60px;
+  }
+    .about-inner {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 60px;
+  }
 }
 
 /* Xs */
@@ -46,5 +68,11 @@
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     align-items: center;
+  }
+  .adventure-items {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+    padding-top: 60px;
   }
 }
