--- a/asstes/css/style.css
+++ b/asstes/css/style.css
@@ -5,8 +5,8 @@
   --white: #fff;
   --gray: #c1c2c1;
 }
-.d-flex{
-    display: flex;
+.d-flex {
+  display: flex;
 }
 * {
   margin: 0;
@@ -306,7 +306,6 @@ div[role="progressbar"]::before {
 .about-item {
   display: flex;
   align-items: center;
-
 }
 
 .content-about h2 {
@@ -327,6 +326,7 @@ div[role="progressbar"]::before {
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
   width: auto;
   display: inline-block;
+
   padding: 16px 30px 16px 30px;
   margin: 20px 10px;
   --e-transform-rotateZ: -8deg;
@@ -336,5 +336,172 @@ div[role="progressbar"]::before {
   z-index: 0;
 }
 .ri-check {
-    color: orangered;
+  color: orangered;
 }
+
+/* Services */
+
+.services {
+  background-color: var(--green-dark);
+  padding: 80px 0;
+}
+.services-title {
+  text-align: center;
+}
+.services-title a {
+  color: var(--orange);
+  background-color: #383120;
+  padding: 12px 25px;
+  border-radius: 20px;
+}
+.services-title h2 {
+  color: var(--white);
+  font-size: 50px;
+  max-width: 1200px;
+  margin-inline: auto;
+  padding: 20px;
+}
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  font-size: 18px;
+  background: #101311;
+  border-radius: 20px;
+  padding: 20px;
+}
+.services-content a svg {
+  color: var(--orange);
+}
+.services-content h4 {
+  color: var(--white);
+  padding: 16px 0;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+  font-size: 19px;
+}
+.services-content p {
+  font-size: 15px;
+  color: var(--gray);
+  letter-spacing: 0.03em;
+  line-height: 30px;
+  font-weight: 200;
+}
+.services-content .btn-link {
+  text-decoration: underline;
+  color: var(--white);
+  letter-spacing: 0.03em;
+  padding: 17px 0;
+  display: flex;
+  align-items: center;
+}
+.services-content .btn-link svg {
+  color: var(--white);
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.single-service-item-two {
+  border-radius: 20px;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  background-color: #101311;
+  padding: 50px 50px 40px;
+}
+.single-service-item-two:hover .hover-bg {
+  visibility: visible;
+  opacity: 1;
+}
+.single-service-item-two .hover-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  /* overflow: hidden; */
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-out 0s;
+  transition: all 0.4s ease-out 0s;
+}
+.single-service-item-two .hover-bg:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(16, 19, 17, 0.75);
+  z-index: -1;
+}
+
+.single-service-item .services-content {
+  position: relative;
+  padding: 20px;
+}
+.inner-services {
+  margin: 80px 0;
+}
+
+/* TEAM */
+
+.team {
+  padding: 80px 0;
+}
+.team-title {
+  text-align: center;
+}
+.team-title h2 {
+  font-size: 40px;
+  padding: 20px 0;
+  max-width: 660px;
+  margin-inline: auto;
+  letter-spacing: 0.03em;
+  line-height: 50px;
+}
+.team-inner {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 40px 0;
+  gap: 20px;
+}
+.team-items {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 15px 20px;
+  border-radius: 10px;
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+.content h4 {
+  color: var(--green-dark);
+  font-size: 22px;
+  padding: 10px 0;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+}
+.content h5 {
+  color: #525252;
+  font-weight: 300;
+  font-size: 15px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #afadad84;
+}
+.icons-team {
+  padding: 19px 0 0 0;
+}
+.icons-team a {
+  color: #525252;
+  margin-right: 8px;
+  transition: 0.3s all ease-in-out;
+}
+.icons-team a:hover {
+  color: var(--green);
+}
+
